// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveCommandConfigurationOptions basic 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": false,
  "configPath": [
    "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/demo.config.yml",
  ],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": false,
  "logLevel": "debug",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions basic 2`] = `
[
  [
    "debug [] cwd: <$WORKSPACE$>/packages/helper-commander
",
  ],
  [
    "debug [] workspace: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2
",
  ],
  [
    "debug [] configPath: [
  '<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/demo.config.yml',
]
",
  ],
  [
    "debug [] parasticConfigPath: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json
",
  ],
  [
    "debug [] parasticConfigEntry: @guanghechen/tool-demo
",
  ],
  [
    "debug [] logLevel: debug
",
  ],
  [
    "debug [] resolvedConfig: {
  __globalOptions__: {
    logLevel: 'info',
  },
  init: {
    logLevel: 'debug',
    color: false,
  },
  generate: {
    logLevel: 'debug',
    date: true,
  },
}
",
  ],
  [
    "debug [] resolvedOptions: {
  logLevel: 'debug',
  workspace: '<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2',
  configPath: [
    '<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/demo.config.yml',
  ],
  color: false,
  date: false,
  a: [
    1,
    2,
    3,
  ],
}
",
  ],
]
`;

exports[`resolveCommandConfigurationOptions no sub-command 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": true,
  "configPath": [],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": false,
  "generate": {
    "date": true,
    "logLevel": "debug",
  },
  "init": {
    "color": true,
    "logLevel": "verbose",
  },
  "logLevel": "warn",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions no sub-command 2`] = `[]`;

exports[`resolveCommandConfigurationOptions with config 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": true,
  "configPath": [],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": true,
  "logLevel": "debug",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions with config 2`] = `
[
  [
    "debug [] cwd: <$WORKSPACE$>/packages/helper-commander
",
  ],
  [
    "debug [] workspace: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2
",
  ],
  [
    "debug [] configPath: []
",
  ],
  [
    "debug [] parasticConfigPath: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json
",
  ],
  [
    "debug [] parasticConfigEntry: @guanghechen/tool-demo
",
  ],
  [
    "debug [] logLevel: debug
",
  ],
  [
    "debug [] resolvedConfig: {
  init: {
    logLevel: 'verbose',
    color: true,
  },
  generate: {
    logLevel: 'debug',
    date: true,
  },
}
",
  ],
  [
    "debug [] resolvedOptions: {
  logLevel: 'debug',
  workspace: '<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2',
  color: true,
  date: true,
  a: [
    1,
    2,
    3,
  ],
}
",
  ],
]
`;
